[gd_scene load_steps=62 format=2]

[ext_resource path="res://images/map2c.png" type="Texture" id=1]
[ext_resource path="res://images/map2a.png" type="Texture" id=2]
[ext_resource path="res://images/map2b.png" type="Texture" id=3]
[ext_resource path="res://images/map2e.png" type="Texture" id=4]
[ext_resource path="res://images/map2d.png" type="Texture" id=5]
[ext_resource path="res://images/map2f.png" type="Texture" id=6]
[ext_resource path="res://images/map1d.png" type="Texture" id=7]
[ext_resource path="res://images/fantômes/C2F1C.png" type="Texture" id=8]
[ext_resource path="res://images/fantômes/C2F1B.png" type="Texture" id=9]
[ext_resource path="res://images/fantômes/C2F1A.png" type="Texture" id=10]
[ext_resource path="res://images/fantômes/C3F1A.png" type="Texture" id=11]
[ext_resource path="res://images/fantômes/C3F1B.png" type="Texture" id=12]
[ext_resource path="res://images/fantômes/C3F1C.png" type="Texture" id=13]
[ext_resource path="res://images/fantômes/C1F2A.png" type="Texture" id=14]
[ext_resource path="res://images/fantômes/C1F2B.png" type="Texture" id=15]
[ext_resource path="res://images/fantômes/C1F2C.png" type="Texture" id=16]
[ext_resource path="res://images/charac png/ncote0.png" type="Texture" id=17]
[ext_resource path="res://images/fantômes/F1A.png" type="Texture" id=18]
[ext_resource path="res://images/fantômes/F1C.png" type="Texture" id=19]
[ext_resource path="res://images/fantômes/F1B.png" type="Texture" id=20]
[ext_resource path="res://grotte.tres" type="Animation" id=21]
[ext_resource path="res://images/charac png/ndos3.png" type="Texture" id=22]
[ext_resource path="res://images/charac png/nface3.png" type="Texture" id=23]
[ext_resource path="res://images/charac png/ndos1.png" type="Texture" id=24]
[ext_resource path="res://images/charac png/ndos0.png" type="Texture" id=25]
[ext_resource path="res://images/charac png/ndos2.png" type="Texture" id=26]
[ext_resource path="res://images/charac png/nface0.png" type="Texture" id=27]
[ext_resource path="res://images/charac png/nface1.png" type="Texture" id=28]
[ext_resource path="res://images/charac png/nface2.png" type="Texture" id=29]
[ext_resource path="res://images/charac png/ncote3.png" type="Texture" id=30]
[ext_resource path="res://Fantome_count.tscn" type="PackedScene" id=31]
[ext_resource path="res://images/charac png/ncote2.png" type="Texture" id=32]
[ext_resource path="res://images/charac png/ncote6.png" type="Texture" id=33]
[ext_resource path="res://images/charac png/ncote7.png" type="Texture" id=34]
[ext_resource path="res://images/charac png/ncote4.png" type="Texture" id=35]
[ext_resource path="res://images/charac png/ncote5.png" type="Texture" id=36]
[ext_resource path="res://Scènes/Scène_2.gd" type="Script" id=37]
[ext_resource path="res://Perso2.gd" type="Script" id=38]
[ext_resource path="res://INVENTAIRE.tscn" type="PackedScene" id=39]
[ext_resource path="res://TEXT.tscn" type="PackedScene" id=40]
[ext_resource path="res://graph/hiclipart.com.png" type="Texture" id=41]
[ext_resource path="res://son/ambiance2.wav" type="AudioStream" id=42]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 32 ), ExtResource( 30 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "walk_s",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 23 ) ],
"loop": true,
"name": "walk_f",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ), ExtResource( 24 ), ExtResource( 26 ), ExtResource( 22 ) ],
"loop": true,
"name": "walk_b",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 51.4579, 55.6943 )

[sub_resource type="Animation" id=3]
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("fleurs buissons:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 1.9, 3.9, 5.4, 6.7, 7.8, 8.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.196078 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0627451 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.180392 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 15.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("brouillard:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4.3, 6.4, 8.4, 9.8, 12.8, 15 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.184314 ), Color( 1, 1, 1, 0.803922 ), Color( 1, 1, 1, 0.152941 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.411765 ), Color( 1, 1, 1, 0.439216 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.184314 ) ]
}

[sub_resource type="Animation" id=5]
length = 9.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("etoiles:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.6, 3.7, 5.2, 6.9, 8, 9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0862745 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.113725 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0862745 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.0862745 ) ]
}

[sub_resource type="Animation" id=6]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("transition debut:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 11 ), ExtResource( 13 ), ExtResource( 12 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 220.883

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=10]
radius = 340.981

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=12]
radius = 241.581

[sub_resource type="Curve2D" id=13]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 29.5435, 311.53, 0, 0, 0, 0, 50.9009, 585.04, 0, 0, 0, 0, 209.594, 832.159, 0, 0, 0, 0, 379.914, 906.635, 0, 0, 0, 0, 643.734, 1005.55, 0, 0, 0, 0, 838.091, 855.391, 0, 0, 0, 0, 985.902, 829.387, 0, 0, 0, 0, 1149.84, 683.164, 0, 0, 0, 0, 1216.51, 407.852, 0, 0, 0, 0, 1233.57, 230.165, 0, 0, 0, 0, 1328.42, 76.3325 )
}

[sub_resource type="Animation" id=14]
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("PathFollowF1:unit_offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0086, 0.919 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PathFollowF1/Fa:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.2, 1.3, 1.9, 2.1, 2.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ -74.0, -61.1, -36.0, 25.6, 16.9, 49.1, 98.1 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PathFollowF1/Fa:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.1, 1.4, 1.6, 1.8, 2, 2.1, 2.2, 2.3, 2.5, 2.6, 2.7, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="SpriteFrames" id=15]
animations = [ {
"frames": [ ExtResource( 18 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ null ],
"loop": true,
"name": "off",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=16]
radius = 46.4778

[sub_resource type="Animation" id=17]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1108.51, 573.258 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.147449, 0.103813 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 24.7 ]
}

[sub_resource type="Animation" id=18]
resource_name = "use"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1531.03, 562.819 ), Vector2( 1578.84, 460.097 ), Vector2( 1531.03, 562.819 ), Vector2( 1578.84, 460.097 ), Vector2( 1531.03, 562.819 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 65.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -0.438143, 0.258966 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 29.9795, 85.5064 )

[node name="scène_2" type="Node2D"]
script = ExtResource( 37 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 958.294, 538.122 )
z_index = -10
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Perso2" type="KinematicBody2D" parent="."]
position = Vector2( 1750, 700 )
z_index = -1
collision_layer = 3
collision_mask = 3
script = ExtResource( 38 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Perso2"]
scale = Vector2( 1.4, 1.4 )
z_index = 1
frames = SubResource( 1 )
animation = "walk_f"
frame = 1
playing = true
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Perso2"]
position = Vector2( 3.82175, 185.577 )
shape = SubResource( 2 )

[node name="TEXT" parent="." instance=ExtResource( 40 )]

[node name="lumiere grotte" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.133333 )
position = Vector2( 954.294, 494.122 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/grotte = ExtResource( 21 )

[node name="buissons" type="Sprite" parent="."]
position = Vector2( 959.294, 542.122 )
z_index = 10
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="fleurs buissons" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.329825 )
position = Vector2( 958.294, 558.122 )
z_index = 10
texture = ExtResource( 5 )

[node name="AnimFleurs" type="AnimationPlayer" parent="."]
anims/AnimFleurs = SubResource( 3 )

[node name="brouillard" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.701575 )
position = Vector2( 954.294, 542.122 )
z_index = 8
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimBrouillard" type="AnimationPlayer" parent="."]
anims/AnimBrouillard = SubResource( 4 )

[node name="etoiles" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0.609517 )
position = Vector2( 954.294, 530.122 )
texture = ExtResource( 6 )

[node name="AnimEtoiles" type="AnimationPlayer" parent="."]
anims/AnimEtoiles = SubResource( 5 )

[node name="transition debut" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 965.608, 540.252 )
rotation = -0.000431301
z_index = 20
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimDebut2" type="AnimationPlayer" parent="."]
anims/AnimDebut = SubResource( 6 )

[node name="Fantome1" type="AnimatedSprite" parent="."]
position = Vector2( 737.045, 622.926 )
rotation = 3.12371
scale = Vector2( 0.287575, 0.287575 )
z_index = -2
frames = SubResource( 7 )
speed_scale = 1.7
playing = true

[node name="zone_1" type="Area2D" parent="Fantome1"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fantome1/zone_1"]
position = Vector2( 2.19995, -23.1714 )
shape = SubResource( 8 )

[node name="Button_1" type="Button" parent="Fantome1"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -74.0
margin_top = -115.0
margin_right = 56.0
margin_bottom = 1.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Fantome2" type="AnimatedSprite" parent="."]
position = Vector2( 1322.27, 593.201 )
rotation = -0.0481601
scale = Vector2( 0.269834, 0.269834 )
z_index = -2
frames = SubResource( 9 )
frame = 3
speed_scale = 1.5
playing = true
centered = false

[node name="zone_2" type="Area2D" parent="Fantome2"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fantome2/zone_2"]
position = Vector2( -44.2129, 358.117 )
shape = SubResource( 10 )

[node name="Button_2" type="Button" parent="Fantome2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = 89.0
margin_right = 97.0
margin_bottom = 530.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Fantome3" type="AnimatedSprite" parent="."]
position = Vector2( 1637.23, 112.573 )
rotation = 0.591254
scale = Vector2( 0.451855, 0.451855 )
z_index = -2
frames = SubResource( 11 )
frame = 1
speed_scale = 1.5
playing = true
centered = false
flip_h = true

[node name="zone_3" type="Area2D" parent="Fantome3"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Fantome3/zone_3"]
position = Vector2( 771.279, 1567.63 )
shape = SubResource( 12 )

[node name="Button" type="Button" parent="Fantome3"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -10.8008
margin_top = 95.1168
margin_right = 359.199
margin_bottom = 448.117
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ambiance" type="AudioStreamPlayer2D" parent="Fantome3/Button"]
stream = ExtResource( 42 )
autoplay = true

[node name="PathF1" type="Path2D" parent="."]
position = Vector2( 1317.2, 569.091 )
rotation = -0.0369479
scale = Vector2( 0.269834, 0.269834 )
curve = SubResource( 13 )
__meta__ = {
"_edit_lock_": true
}

[node name="FuiteF1" type="AnimationPlayer" parent="PathF1"]
anims/PathF1 = SubResource( 14 )

[node name="PathFollowF1" type="PathFollow2D" parent="PathF1"]
position = Vector2( 31.0788, 331.191 )
rotation = 1.49287
offset = 19.7148

[node name="Fa" type="AnimatedSprite" parent="PathF1/PathFollowF1"]
rotation = -1.29154
frames = SubResource( 15 )
animation = "off"
speed_scale = 2.0
playing = true

[node name="MUR" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="MUR" type="CollisionPolygon2D" parent="MUR"]
position = Vector2( -6.10352e-05, -3.38004 )
polygon = PoolVector2Array( 279.863, 351.361, 449.236, 781.922, 512.417, 816.976, 455.266, 821.112, 389.876, 745.91, 267.492, 685.797, 180.066, 723.48, 207.198, 804.877, 247.486, 882.344, 303.606, 934.147, 435.273, 973, 897.186, 1016.17, 1577.1, 1026.96, 1909.23, 958.794, 1902.43, 828.198, 1758.23, 806.432, 1632.84, 777.556, 1543.18, 758.217, 1495.71, 661.522, 1365.62, 666.796, 1316.39, 752.943, 1223.21, 754.701, 1145.85, 622.844, 1107.18, 638.667, 1047.4, 631.635, 966.529, 624.602, 913.787, 670.313, 878.831, 689.648, 754.249, 643.825, 618.428, 665.038, 519.405, 646.689, 497.471, 801.517, 439.103, 724.813, 305.765, 390.213, 1033.17, -28.5301, 2088.66, -30.6886, 2064.92, 1152.15, 208.634, 1165.1, -46.0657, 1121.93, -63.3334, -65.2241 )
__meta__ = {
"_edit_lock_": true,
"_editor_description_": ""
}

[node name="Fantome_count" parent="." instance=ExtResource( 31 )]

[node name="stick_button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1083.0
margin_top = 491.0
margin_right = 1135.0
margin_bottom = 655.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zone_stick" type="Area2D" parent="stick_button"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="stick_button/zone_stick"]
position = Vector2( 39.0142, 143.865 )
shape = SubResource( 16 )

[node name="stick" type="Sprite" parent="."]
position = Vector2( 1108.51, 573.258 )
rotation = 0.431096
scale = Vector2( -0.147449, 0.103813 )
z_index = -2
texture = ExtResource( 41 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="stick"]
anims/default = SubResource( 17 )
anims/use = SubResource( 18 )

[node name="INVENTAIRE" parent="." instance=ExtResource( 39 )]
self_modulate = Color( 1, 1, 1, 0.392157 )

[node name="Button_inv2" type="Button" parent="INVENTAIRE"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -45.0
margin_top = -56.0
margin_right = 45.0
margin_bottom = 17.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="stick2" type="Sprite" parent="INVENTAIRE"]
visible = false
position = Vector2( -0.689453, -19.1445 )
rotation = -4.69494
scale = Vector2( -0.0648535, -0.0542065 )
texture = ExtResource( 41 )
__meta__ = {
"_edit_lock_": true
}

[node name="enter_scène_3" type="Area2D" parent="."]
position = Vector2( 1683.09, 821.266 )
collision_layer = 2
collision_mask = 2
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="enter_scène_3"]
position = Vector2( 204.832, 56.0924 )
shape = SubResource( 19 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="Fantome1/zone_1" to="." method="_on_zone_1_body_entered"]
[connection signal="body_exited" from="Fantome1/zone_1" to="." method="_on_zone_1_body_exited"]
[connection signal="pressed" from="Fantome1/Button_1" to="." method="_on_Button_1_pressed"]
[connection signal="body_entered" from="Fantome2/zone_2" to="." method="_on_zone_2_body_entered"]
[connection signal="body_exited" from="Fantome2/zone_2" to="." method="_on_zone_2_body_exited"]
[connection signal="pressed" from="Fantome2/Button_2" to="." method="_on_Button_2_pressed"]
[connection signal="body_entered" from="Fantome3/zone_3" to="." method="_on_zone_3_body_entered"]
[connection signal="body_exited" from="Fantome3/zone_3" to="." method="_on_zone_3_body_exited"]
[connection signal="pressed" from="Fantome3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="stick_button" to="." method="_on_stick_button_pressed"]
[connection signal="body_entered" from="stick_button/zone_stick" to="." method="_on_zone_stick_body_entered"]
[connection signal="body_exited" from="stick_button/zone_stick" to="." method="_on_zone_stick_body_exited"]
[connection signal="animation_finished" from="stick/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="INVENTAIRE/Button_inv2" to="." method="_on_Button_inv2_pressed"]
[connection signal="body_entered" from="enter_scène_3" to="." method="_on_enter_scne_3_body_entered"]
